--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -100,19 +100,22 @@ on late-fs
 
 on post-fs-data
     mkdir /vendor/data/tombstones 0771 system system
-#ExtR HONGMI-90116,wufa@wingtech.com,add,20210908,add mi_thermal
-    mkdir /data/vendor/thermal 0771 root system
-    mkdir /data/vendor/thermal/config 0771 root system
     chmod 0644 /dev/elliptic0
     chmod 0644 /dev/elliptic1
     chmod 0660 /dev/ir_spi
     chown system system /dev/ir_spi
+    mkdir /data/vendor/thermal 0771 root system
+    mkdir /data/vendor/thermal/config 0771 root system
     mkdir /data/vendor/wlan_logs 0777 root shell
 
 on early-boot
     start vendor.sensors
 
 on boot
+    chown system system /sys/class/thermal/thermal_message/sconfig
+    chown system system /sys/class/thermal/thermal_message/balance_mode
+    chown system system /sys/class/thermal/thermal_message/charger_temp
+
     # DT2W
     chown system system /proc/tp_gesture
     chmod 0644 /proc/tp_gesture
@@ -190,9 +193,7 @@ on charger
     start vendor.power_off_alarm
     setprop sys.usb.controller 4e00000.dwc3
     setprop sys.usb.configfs 1
-    #+ExtR HONGMI-90116,wufa@wingtech.com,add,20210908,add mi_thermal
     start mi_thermald
-    #-ExtR HONGMI-90116,wufa@wingtech.com,add,20210908,add mi_thermal
 
 #+ExtR HONGMI-90162,zhangb02@wingtech.com,add,20211003,add misound
 service audioshell_service /vendor/bin/audioshell_service
@@ -248,13 +249,11 @@ service vendor.cnss_diag /system/vendor/bin/cnss_diag -q -f -t HELIUM
    group system wifi inet sdcard_rw media_rw diag
    oneshot
 
-#ExtR HONGMI-90116,wufa@wingtech.com,add,20210908,add mi_thermal
 service mi_thermald /system/vendor/bin/mi_thermald	
     class main
     user root
     group system
     seclabel u:r:mi_thermald:s0
-#-ExtR HONGMI-90116,wufa@wingtech.com,add,20210908,add mi_thermal
 
 service svi_on /vendor/bin/ppd "svi:on"
     class main
